# WaterMeterCV

./: .dockerignore  .gitignore  CLAUDE.md  NOTICE.md  README.md  pyproject.toml
.claude/: settings.local.json
Notebooks/: 00_data_exploration.ipynb
Notebooks/01_baseline/: yolo_single_stage.ipynb  yolo_single_stage_remaining_cells.md
Notebooks/02_roi_detection/: faster_rcnn.ipynb  segmentation_unet.ipynb  yolo_roi.ipynb
Notebooks/03_ocr/: 00_pretrained_ocr.ipynb  00_pretrained_ocr.md  00_pretrained_ocr_yolo11m.ipynb  01_single_image_bbox_ultralytics_pipeline.ipynb  cnn_ctc.ipynb  crnn_ctc.ipynb  paddle_ocr.ipynb  per_digit_classifier.ipynb  transformer_ocr.ipynb
configs/: default.yaml
docker/: Dockerfile.cpu  Dockerfile.cpu.arm64  Dockerfile.gpu  docker-compose.yml
docs/: colab-workflow.md  service.md
docs/notes/: DataFlow.md  ML Pipeline Variations.md  README.md  SystemRequirements.md  roi-detection-findings.md
docs/superpowers/plans/: 2026-04-08-ml-research-plan.md  2026-04-10-baseline-yolo.md  2026-04-11-colab-workflow.md  2026-04-12-roi-detection-notebooks.md  2026-04-14-ocr-notebooks.md
docs/superpowers/specs/: 2026-04-08-ml-research-plan-design.md  2026-04-10-baseline-yolo-design.md  2026-04-11-roi-detection-notebooks-design.md
media/gifs/: 4x.avif
models/data/: augmentations.py  augmentations_ocr.py  ocr_dataset.py  ocr_dataset_pytorch.py  roi_dataset.py  unified_loader.py
models/metrics/: evaluation.py  ocr_metrics.py
models/utils/: orientation.py  visualization.py
results/: baseline_comparison.csv  baseline_metrics.json  ocr_comparison.csv  ocr_comparison_yolo11m.csv  ocr_comparison_yolo11m_before_priors_fix_20260419_163801.csv  ocr_comparison_yolo11m_model_only.csv  ocr_pretrained_combinations_metrics.csv  ocr_pretrained_combinations_metrics_yolo11m.csv  ocr_pretrained_combinations_metrics_yolo11m_before_priors_fix_20260419_163801.csv  ocr_pretrained_combinations_metrics_yolo11m_model_only.csv  ocr_pretrained_delta_vs_original_yolo11m.csv  ocr_pretrained_delta_vs_original_yolo11m_model_only.csv  ocr_pretrained_pilot.json  ocr_pretrained_pilot_yolo11m.json  ocr_pretrained_pilot_yolo11m_before_priors_fix_20260419_163801.json  ocr_pretrained_pilot_yolo11m_model_only.json  roi_comparison.csv  roi_faster_rcnn_metrics.json  roi_unet_metrics.json  roi_yolo_metrics.json  service_bench_cpu.csv  service_bench_gpu.csv
results/ocr_pretrained_failures_single_image_pipeline/ultralytics_yolo11m_baseline/none/test/wm_bbox/: all_predictions_single_image_pipeline.csv
scripts/: bench_service.py  debug_bbox_crop.py  run_best_faster_rcnn_predictions.py  run_best_unet_predictions.py  run_best_yolo_roi_predictions.py  visualize_ocr_crops.py  visualize_ocr_dirty_augmentations.py  visualize_ocr_preprocessing.py
src/watermetercv/: __init__.py  config.py  pipeline.py
src/watermetercv/ocr/: heuristics.py  predictor.py  priors.py
src/watermetercv/roi/: yolo_roi.py
src/watermetercv/service/: app.py  schemas.py
tests/: test_augmentations_ocr.py  test_evaluation.py  test_heuristics.py  test_ocr_dataset.py  test_ocr_dataset_pytorch.py  test_ocr_metrics.py  test_orientation.py  test_pipeline_smoke.py  test_roi_dataset.py  test_service.py  test_unified_loader.py  test_visualization.py
