[project]
name = "watermetercv"
version = "0.1.0"
description = "CV pipeline for water meter reading extraction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pip>=26.0.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.33",
    "albumentations>=2.0.0",
    "pyyaml>=6.0",
    "opencv-python>=4.10.0",
    "Pillow>=11.0.0",
    "rapidfuzz>=3.0.0",  # replaces editdistance — has pre-built wheels for Python 3.13
    "shapely>=2.0.0",
    "tqdm>=4.67.3",
    "segmentation-models-pytorch>=0.5.0",
    "easyocr>=1.7.2",
    "pytesseract>=0.3.13",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]
# Локальный GPU (CUDA 13.0). Команда: uv sync --extra cuda
cuda = ["torch>=2.7.0", "torchvision>=0.22.0"]
# Google Colab: torch/torchvision предустановлены в runtime — не трогать.
# Установка в ячейке: pip install -q ultralytics albumentations rapidfuzz shapely
# НЕ запускать uv sync в Colab — сломает предустановленный PyTorch.
colab = [
    "ultralytics>=8.3.0",
    "albumentations>=2.0.0",
    "pyyaml>=6.0",
    "opencv-python>=4.10.0",
    "Pillow>=11.0.0",
    "rapidfuzz>=3.0.0",
    "shapely>=2.0.0",
]
detectron2 = []  # not on PyPI; install manually: pip install detectron2 from facebookresearch repo
transformers = ["transformers>=4.40.0", "sentencepiece>=0.2.0"]
craft = []  # craft-text-detector is incompatible with opencv>=4.5; install manually when needed

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "extra == 'cuda'" }]
torchvision = [{ index = "pytorch-cu130", marker = "extra == 'cuda'" }]

[tool.pytest.ini_options]
pythonpath = ["."]
