[project]
name = "watermetercv"
version = "0.1.0"
description = "CV pipeline for water meter reading extraction"
readme = "README.md"
requires-python = ">=3.13"
# Базовые inference-зависимости, нужные и сервису, и большинству ноутбуков.
# Research-only пакеты (easyocr, pytesseract, SMP, pandas, albumentations и т.п.)
# вынесены в extra `research` — не попадают в Docker-образ через `uv sync`.
dependencies = [
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.33",
    "opencv-python>=4.10.0",
    "Pillow>=11.0.0",
    "numpy>=2.0",
    "shapely>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.67.3",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "httpx>=0.27.0", "requests>=2.31.0"]

# Локальный GPU (CUDA 13.0): uv sync --extra cuda
cuda = ["torch>=2.7.0", "torchvision>=0.22.0"]

# FastAPI сервис (минимальный inference-стек; все остальные deps уже в main).
# opencv-python-headless в локальной среде не ставим — конфликтует с opencv-python,
# см. docker/Dockerfile.*, где делаем swap только внутри образа.
service = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

# Research-ноутбуки: альтернативные OCR, доп. модели, EDA/visualization.
# uv sync --extra research — ставит в локальную research-ветку, НЕ в Docker.
research = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "albumentations>=2.0.0",
    "segmentation-models-pytorch>=0.5.0",
    "easyocr>=1.7.2",
    "pytesseract>=0.3.13",
]

# Google Colab: torch/torchvision предустановлены в runtime — не трогать.
# Установка в ячейке: pip install -q ultralytics albumentations rapidfuzz shapely
# НЕ запускать uv sync в Colab — сломает предустановленный PyTorch.
colab = [
    "ultralytics>=8.3.0",
    "albumentations>=2.0.0",
    "pyyaml>=6.0",
    "opencv-python>=4.10.0",
    "Pillow>=11.0.0",
    "rapidfuzz>=3.0.0",
    "shapely>=2.0.0",
]
detectron2 = []  # not on PyPI; install manually: pip install detectron2 from facebookresearch repo
transformers = ["transformers>=4.40.0", "sentencepiece>=0.2.0"]
craft = []  # craft-text-detector is incompatible with opencv>=4.5; install manually when needed

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "extra == 'cuda'" }]
torchvision = [{ index = "pytorch-cu130", marker = "extra == 'cuda'" }]

[project.scripts]
watermetercv-serve = "watermetercv.service.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watermetercv"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
